# commit

./: .cz.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  config.yaml  conv_rag_example.json  docker-compose.yaml  main.py  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
docs/PULL_REQUEST_TEMPLATE/: todo_list_pull_request_template.md
