[tool.poetry]
name = "faster-whisper-master"
version = "3.2.2"
description = ""
authors = ["sushi <yihsiang@barkingdog.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ctranslate2 = "^3.20.0"
torch = "^2.1.0"
torchaudio = "^2.1.0"
pydub = "^0.25.1"
soundfile = "^0.12.1"
deepfilternet = "^0.5.6"
pyyaml = "^6.0.1"
onnxruntime = "^1.16.1"
av = "^10.0.0"
huggingface-hub = "^0"
tokenizers = "^0"
flack = "^1.3.7"
termcolor = "^2.3.0"
marshmallow = "^3.20.1"
pydantic = "^2.4.2"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
httpx = "^0.25.1"
orjson = "^3.9.10"
ffmpeg = "^1.4"
python-multipart = "^0.0.6"
python-jose = "^3.3.0"
python-magic = "^0.4.27"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
ruff = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.commitizen]
#name = "cz_conventional_commits"
#tag_format = "$version"
#version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
changelog_incremental = true
